kubernetes/apps/tiny/home-assistant-ingress-route-patch.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  routes:
    - match: Host(`hass.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: home-assistant-main
          port: 8123
      middlewares:
        - name: default-headers
          namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-code
  namespace: home-assistant
spec:
  routes:
    - match: Host(`hass-code.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: home-assistant-code
          port: 8081
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-admins
          namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
spec:
  routes:
    - match: Host(`zigbee2mqtt.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: zigbee2mqtt
          port: 8080
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-admins
          namespace: traefik
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: node-red
  namespace: home-assistant
spec:
  routes:
    - match: Host(`node-red.tiny.heimelska.co.uk`)
      kind: Rule
      services:
        - name: node-red
          port: 1880
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: chain-admins
          namespace: traefik
